--- a/MauiGridItemsLayoutChangeSpanIssue/AppShell.xaml
+++ b/MauiGridItemsLayoutChangeSpanIssue/AppShell.xaml
@@ -7,7 +7,7 @@
     Shell.FlyoutBehavior="Flyout">
 
     <ShellContent
-        Title="CollectionView with iOS workaround"
+        Title="CollectionView with workaround"
         ContentTemplate="{DataTemplate local:CollectionViewWithWorkaround}"
         Route="CollectionViewWithWorkaround" />
 
